examples/test/conf/Gateway/RealIP/HTTPRoute.yaml
# Real IP 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: real-ip-test
  namespace: edgion-test
spec:
  parentRefs:
    - name: real-ip-gateway
      namespace: edgion-test
  hostnames:
    - "test.example.com"
  rules:
    - matches:
        - path:
            type: Exact
            value: /headers
      backendRefs:
        - name: test-http
          port: 30001
